--- a/EFCRUDTest/Pages/Index.cshtml
+++ b/EFCRUDTest/Pages/Index.cshtml
@@ -30,7 +30,7 @@
         <p>You can download the completed project from GitHub.</p>
         <p>
             <a class="btn btn-default"
-               href="https://github.com/dotnet/AspNetCore.Docs/tree/master/aspnetcore/data/ef-rp/intro/samples/">
+               href="https://github.com/DamonLeedham/Termite.git">
                 See project source code &raquo;
             </a>
         </p>
