--- a/EFCRUDTest/Pages/Users/Create.cshtml
+++ b/EFCRUDTest/Pages/Users/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@page
-@model EFCRUDTest.CreateModel
+﻿@page 
+@model EFCRUDTest.Pages.Users.CreateModel
 
 @{
     ViewData["Title"] = "Create";
@@ -14,9 +14,14 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="User.Name" class="control-label"></label>
-                <input asp-for="User.Name" class="form-control" />
-                <span asp-validation-for="User.Name" class="text-danger"></span>
+                <label asp-for="User.LastName" class="control-label"></label>
+                <input asp-for="User.LastName" class="form-control" />
+                <span asp-validation-for="User.LastName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="User.FirstName" class="control-label"></label>
+                <input asp-for="User.FirstName" class="form-control" />
+                <span asp-validation-for="User.FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="User.Email" class="control-label"></label>
