--- a/EFCRUDTest/Pages/Users/Delete.cshtml
+++ b/EFCRUDTest/Pages/Users/Delete.cshtml
@@ -1,5 +1,5 @@
-﻿@page
-@model EFCRUDTest.DeleteModel
+﻿@page "{id:int}"
+@model EFCRUDTest.Pages.Users.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -7,16 +7,24 @@
 
 <h2>Delete</h2>
 
+<p class="text-danger">@Model.ErrorMessage</p>
+
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>User</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.User.Name)
+            @Html.DisplayNameFor(model => model.User.LastName)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.User.Name)
+            @Html.DisplayFor(model => model.User.LastName)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.User.FirstName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.User.FirstName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.User.Email)
@@ -25,7 +33,7 @@
             @Html.DisplayFor(model => model.User.Email)
         </dd>
     </dl>
-    
+
     <form method="post">
         <input type="hidden" asp-for="User.ID" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
