--- a/EFCRUDTest/Pages/Users/Details.cshtml
+++ b/EFCRUDTest/Pages/Users/Details.cshtml
@@ -1,5 +1,5 @@
-﻿@page
-@model EFCRUDTest.DetailsModel
+﻿@page "{id:int}"
+@model EFCRUDTest.Pages.Users.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
@@ -12,16 +12,40 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.User.Name)
+            @Html.DisplayNameFor(model => model.User.LastName)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.User.Name)
+            @Html.DisplayFor(model => model.User.LastName)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.User.FirstName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.User.FirstName)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.User.Email)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.User.Email)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.User.Bugs)
+        </dt>
+        <dd>
+            <table class="table">
+                <tr>
+                    <th>Description</th>
+                </tr>
+                @foreach (var item in Model.User.Bugs)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Description)                        
+                        </td>
+                    </tr>
+                }
+            </table>
         </dd>
     </dl>
 </div>
