--- a/EFCRUDTest/Pages/Users/Edit.cshtml
+++ b/EFCRUDTest/Pages/Users/Edit.cshtml
@@ -1,5 +1,5 @@
-﻿@page
-@model EFCRUDTest.EditModel
+﻿@page "{id:int}"
+@model EFCRUDTest.Pages.Users.EditModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -15,9 +15,14 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="User.ID" />
             <div class="form-group">
-                <label asp-for="User.Name" class="control-label"></label>
-                <input asp-for="User.Name" class="form-control" />
-                <span asp-validation-for="User.Name" class="text-danger"></span>
+                <label asp-for="User.LastName" class="control-label"></label>
+                <input asp-for="User.LastName" class="form-control" />
+                <span asp-validation-for="User.LastName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="User.FirstName" class="control-label"></label>
+                <input asp-for="User.FirstName" class="form-control" />
+                <span asp-validation-for="User.FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="User.Email" class="control-label"></label>
